--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,6 +16,8 @@
         "ext-pdo": "*",
         "bramus/router": "~1.5",
         "zeptech/annotations": "1.1.0",
-        "haydenpierce/class-finder": "^0.4.3"
+        "haydenpierce/class-finder": "^0.4.3",
+        "symfony/serializer": "v3.3.0",
+        "symfony/property-access": "v3.3.0"
     }
 }
